# pineapple-chess-engine

./: Cargo.toml  README.md
src/: engine.rs  lib.rs  main.rs  random.rs  uci.rs
src/engine/: attack_tables.rs  board.rs  evaluation.rs  game.rs  generate_moves.rs  move_scoring.rs  moves.rs  search.rs  zobrist_hashes.rs
src/engine/search/: evaluation.rs  move_scoring.rs
