[package]
name = "pineapple-chess-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
once_cell = "1.18.0"
strum = "0.24"
strum_macros = "0.24"

[profile.dev]
opt-level = 1

[profile.release]
debug = true
